# Slatepad

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml  release.yml
docs/: index.html
scripts/: AI.md  UPDATER.md  generate-icon.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/audio/: detector.rs  mic.rs  mod.rs  recorder.rs  system_audio.rs
src/components/: AiChatPanel.tsx  AiSettingsForm.tsx  CodeBlockMenu.tsx  ConfirmDialog.tsx  EditorBubbleMenu.tsx  EditorToolbar.tsx  ExcalidrawNodeView.tsx  FindBar.tsx  KeyboardHelp.tsx  MeetingBar.tsx  MeetingDetectedPopup.tsx  NewNoteMenu.tsx  NoteActionsBar.tsx  NoteEditor.tsx  NoteListItem.tsx  NoteMenu.tsx  PreferencesDialog.tsx  QuickSwitcher.tsx  Sidebar.tsx  TableMenu.tsx  TagsInput.tsx  TitleInput.tsx
src/hooks/: useAiChat.ts  useAutoSave.ts  useMeetingRecorder.ts  useNotes.ts  useTheme.ts  useUpdater.ts
src/lib/: aiChat.ts  aiSettings.ts  audioPlayerNode.tsx  backup.ts  db.ts  editorCommands.ts  excalidrawNode.tsx  exportMarkdown.ts  findExtension.ts  imagePasteExtension.ts  importMarkdown.ts  lowlight.ts  markdownPasteExtension.ts  meetingProcessor.ts  meetingSettings.ts  preview.ts  printNote.ts  searchNotes.ts  slashCommandExtension.ts  slashCommands.ts  templates.ts  tiptap.ts  transcription.ts  types.ts
src/styles/: globals.css
